only need last slide now

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 			</section>
 		</section>
 		<section>
+			<h2>Er denne skummel?</h2>
+			<img src="img/terminal.png" />
+		</section>
+		<section>
 			<section data-markdown id="aboutVVV">
 				## Hva er VVV
 				Varying Vagrant Vagrants (VVV) er et ferdig oppsett for en Vagrant-maskin som er rettet mot Wordpress.
@@ -111,11 +115,10 @@
 		</section>
 		<section data-markdown>
 			## Ressurser
-			* [Varying Vagrant Vagrant](http://www.sau.no)
+			* [Varying Vagrant Vagrant](https://github.com/Varying-Vagrant-Vagrants/VVV)
 			* [VVV Wiki](https://github.com/Varying-Vagrant-Vagrants/VVV)
-			* Vagrant
-			* Vagrant Manager
-
+			* [Vagrant](https://www.vagrantup.com/)
+			* [Vagrant Manager](http://vagrantmanager.com/downloads/)
 		</section>
 	</div>
 </div>
