add last slides, and info for slides

--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
 			* [Vagrant](https://www.vagrantup.com/)
 			* [Vagrant Manager](http://vagrantmanager.com/downloads/)
 		</section>
+		<section data-markdown>
+			# Spørsmål?
+		</section>
+		<section data-markdown>
+			# Takk for meg
+			Alle slides er på jimtrim.github.io/vvv-intro
+		</section>
 	</div>
 </div>
 
