fix link in last slide

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		</section>
 		<section data-markdown>
 			# Takk for meg
-			Alle slides er på jimtrim.github.io/vvv-intro
+			Alle slides finnes på [jimtrim.github.io/vvv-intro](jimtrim.github.io/vvv-intro)
 		</section>
 	</div>
 </div>
