--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 ...
 ~$ vagrant plugin install vagrant-hostsupdater
 				</code></pre>
-				<pre><code data-trim>~$ vagrant plugin install vagrant-triggers</code></pre>
+				<p>Disse pluginene vil gjøre oppdatering automatisk når man starter og skrur av Vagrant-maskinen. Man kan gjøre dette manuelt, men pluginene er høyst anbefalt</p>
 
 			</section>
 		</section>
@@ -105,7 +105,7 @@
 				<pre><code data-trim>~$ vagrant ssh</code></pre>
 
 				<span>Da vil man få et shell på Linux-maskinen som kjører, og kan konfigurere, som feks:</span>
-				<pre><code data-trim>~$ xdebug-on</code></pre>
+				<pre><code data-trim>~$ xdebug_on</code></pre>
 
 			</section>
 		</section>
